--- a/Assets/Scripts/Main.asmdef
+++ b/Assets/Scripts/Main.asmdef
@@ -2,7 +2,8 @@
     "name": "Main",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:3acd1f98954e005a7b39a90a3a9d6af4"
+        "GUID:3acd1f98954e005a7b39a90a3a9d6af4",
+        "GUID:cf414061cae3a954baf92763590f3127"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
